--- a/src/System.Private.Reflection.Core/src/System.Private.Reflection.Core.Experimental.csproj
+++ b/src/System.Private.Reflection.Core/src/System.Private.Reflection.Core.Experimental.csproj
@@ -1,4 +1,5 @@
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
     <AssemblyName>System.Private.Reflection.Core.Experimental</AssemblyName>
     <ProjectGuid>{50CDFB37-A390-499E-B3B6-690BE70AB706}</ProjectGuid>
