--- a/src/System.Private.TypeLoader/src/System.Private.TypeLoader.Experimental.csproj
+++ b/src/System.Private.TypeLoader/src/System.Private.TypeLoader.Experimental.csproj
@@ -1,4 +1,5 @@
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" DefaultTargets="Build">
   <PropertyGroup>
     <AssemblyName>System.Private.TypeLoader.Experimental</AssemblyName>
     <ProjectGuid>{9D3328F2-6D2E-4064-82AE-57EED73872B2}</ProjectGuid>
